# analphipy

./: .buildinfo  .buildinfo.bak  .copier-answers.yml  .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc.toml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  Makefile  README.md  README.rst  TODO.md  api.html  api_autosummary.html  authors.html  changelog.html  cleanup.sh  contributing.html  copy_docs_to_here.sh  environment-dev.yaml  environment-tools.yaml  environment.yaml  genindex.html  history.html  index.html  installation.html  justfile  license.html  navigation.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  readme.html  (+5 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  update-copier.yml
_sources/: api_autosummary.rst.txt  installation.md  installation.rst.txt  navigation.md
_sources/examples/usage/: usage.ipynb
_static/: documentation_options.js
_static/js/: leave_notice.js
analphipy/: __init__.py  _attrs_utils.py  _docstrings.py  _potentials.py  _typing.py  cached_decorators.py  measures.py  norofrenkel.py  potential_analysis.py  potentials.py  potentials_base.py  potentials_generic.py  utils.py
changelog.d/: 20230428_090456_william.krekelberg_module_utilities.md  20230804_134821_william.krekelberg_update_typing.md
config/: nbval.ini  recipe-append.yaml  userconfig.toml
docs/: Makefile  api.md  api_autosummary.rst  conf.py  index.md  index.rst  installation.md  installation.rst  make.bat  requirements-conda.txt  requirements.txt  spelling_wordlist.txt  usage.rst
docs/_static/js/: leave_notice.js
docs/_templates/: custom-class.rst
docs/examples/: index.md
docs/examples/usage/: usage.ipynb
docs/notebooks/: usage.ipynb
docs/reference/: index.md  index.rst
environment/: base.yaml  dev-extras.yaml  dev.yaml  dist-conda.yaml  docs-extras.yaml  docs.yaml  example-extras.yaml  example.yaml  lint-extras.yaml  lint.yaml  py310-dev-base.yaml  py310-dev-complete.yaml  py310-dev.yaml  py310-docs.yaml  py310-test-extras.yaml  py310-test.yaml  py310-typing.yaml  py311-test-extras.yaml  py311-test.yaml  py311-typing.yaml  py38-test-extras.txt  py38-test-extras.yaml  py38-test.yaml  py38-typing.yaml  py39-test-extras.yaml  py39-test.yaml  py39-typing.yaml  test-extras.txt  test-extras.yaml  test.yaml  tox_conda_tmp_gl80gok.yaml  typing.yaml
environment/lock/: py310-dev-conda-lock.yml  py310-dist-conda-conda-lock.yml  py310-dist-pypi-conda-lock.yml  py310-test-conda-lock.yml  py310-typing-conda-lock.yml  py311-test-conda-lock.yml  py311-typing-conda-lock.yml  py38-test-conda-lock.yml  py38-typing-conda-lock.yml  py39-test-conda-lock.yml  py39-typing-conda-lock.yml
examples/: index.html
examples/usage/: usage.html  usage.ipynb
notebooks/: usage.html
reference/: index.html
requirements/: build.txt  dev-base.txt  dev-complete.txt  dev.txt  docs-live.txt  docs-spelling.txt  docs.txt  py310-dev-base.yaml  py310-dev-complete.yaml  py310-docs.yaml  py310-test-extras.yaml  py310-test.yaml  py310-typing.yaml  py311-dev-base.yaml  py311-dev-complete.yaml  py311-dev.yaml  py311-docs.yaml  py311-test-extras.yaml  py311-test-notebook.yaml  py311-test.yaml  py311-typing.yaml  py312-dev.yaml  py312-test-extras.yaml  py312-test.yaml  py312-typing.yaml  py313-dev.yaml  py313-test-extras.yaml  py313-test.yaml  py313-typing.yaml  py314-dev.yaml  py314-test-extras.yaml  py314-test.yaml  py38-test-extras.yaml  py38-test.yaml  py38-typing.yaml  py39-test-extras.yaml  py39-test.yaml  py39-typing.yaml  test-extras.txt  test-notebook.txt  (+4 more)
requirements/lock/: docs-live.txt  docs-spelling.txt  docs.txt  py310-dev-conda-lock.yml  py310-dist-pypi-conda-lock.yml  py310-test-conda-lock.yml  py310-test.txt  py310-typing.txt  py311-dev-base.txt  py311-dev-base.txt.hash.json  py311-dev-complete.txt  py311-dev-complete.txt.hash.json  py311-dev.txt  py311-dev.txt.hash.json  py311-docs.txt  py311-docs.txt.hash.json  py311-test-notebook.txt  py311-test-notebook.txt.hash.json  py311-test.txt  py311-test.txt.hash.json  py311-typing-conda-lock.yml  py311-typing.txt  py311-typing.txt.hash.json  py311-uvxrun-tools.txt  py311-uvxrun-tools.txt.hash.json  py312-test.txt  py312-typing.txt  py312-typing.txt.hash.json  py312-uvxrun-tools.txt  py313-test.txt  py313-test.txt.hash.json  py313-typing.txt  py313-typing.txt.hash.json  py38-test.txt  py38-typing.txt  py39-test-conda-lock.yml  py39-test.txt  py39-typing-conda-lock.yml  py39-typing.txt  uvx-tools.txt
scripts/: dist-conda.mk
src/analphipy/: __init__.py  _attrs_utils.py  _docstrings.py  _typing.py  _typing_compat.py  base_potential.py  cached_decorators.py  measures.py  norofrenkel.py  potential.py  potentials.py  potentials_base.py  utils.py
src/analphipy/_docfiller/: __init__.py  docscrape.py
tests/: __init__.py  conftest.py  test_analphipy.py  test_generic.py  test_js.py  test_measures.py  test_nf_derivs.py  test_norofrenkel.py  test_potentials.py  test_secondvirial.py  test_smoke.py  utils.py
tests/data/: crit_eff_lj_.csv  crit_eff_lj_nm_.csv  crit_eff_sw_.csv  crit_eff_yukawa_.csv  eff_hs_.csv  eff_lj_.csv  eff_lj_nm_.csv  eff_stockmayer_.csv  eff_sw_.csv  eff_yukawa_.csv  vir_hs_.csv  vir_lj_.csv  vir_lj_nm_.csv  vir_stockmayer_.csv  vir_sw_.csv  vir_yukawa_.csv
tools/: create_pythons.py  dataclass_parser.py  notebook.just  noxtools.py  projectconfig.py  shared.just  sync_pyproject_min_versions.py
