[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.11.21,<0.12.0",
]

[project]
name = "analphipy"
version = "0.4.1"
description = "Utilities to perform stat mech analysis of pair potentials"
readme = "README.md"
keywords = [
    "analphipy",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "attrs",
    "module-utilities[inherit]>=0.10.1",
    "numpy",
    "scipy",
    "typing-extensions; python_version<'3.12'",
]

[project.optional-dependencies]
viz = [
    "matplotlib",
    "pandas",
]

[project.urls]
Documentation = "https://pages.nist.gov/analphipy/"
Homepage = "https://github.com/usnistgov/analphipy"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "notebook" },
    { include-group = "nox" },
    { include-group = "optional" },
    { include-group = "pytest-accept" },
    { include-group = "test" },
    { include-group = "test-notebook" },
    { include-group = "type" },
]
test = [
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pandas" },
    { include-group = "pytest" },
]
type = [
    "pandas-stubs",
    "scipy-stubs",
    { include-group = "nox" },
    { include-group = "pandas" },
    { include-group = "pylint" },
    { include-group = "pytest" },
    { include-group = "typecheck-runner" },
]
docs = [
    "autodocsumm",
    "myst-nb",
    "sphinx>=5.3.0",
    # other
    "sphinx-book-theme",
    "sphinx-copybutton",
    { include-group = "optional" },
]
# other groups
basedpyright = [ "basedpyright>=1.39.7" ]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
ipython = [ "ipython" ]
mypy = [ "mypy[faster-cache]>=2.1.0" ]
notebook = [ "ipykernel", "nbclient" ]
nox = [ "nox>=2026.4.10" ]
optional = [ "analphipy[viz]" ]
pandas = [ "pandas" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
pytest-accept = [ "pytest-accept" ]
test-extras = [
    { include-group = "test" },
]
test-notebook = [
    "nbval",
    { include-group = "optional" },
    { include-group = "test" },
]
typecheck-runner = [ "typecheck-runner>=0.2.0; python_version>'3.9'" ]

# * uv -------------------------------------------------------------------------
[tool.uv]
required-version = ">=0.11.8"
default-groups = [ "dev" ]
fork-strategy = "requires-python"
exclude-newer = "7 days"
managed = true
build-backend.source-include = [ "tests/**" ]
pip.annotation-style = "line"
pip.generate-hashes = true

[tool.uv.dependency-groups]
dev.requires-python = ">=3.14"
docs.requires-python = ">=3.14"
docs-live.requires-python = ">=3.14"
docs-spelling.requires-python = ">=3.14"
# other tools
ipython.requires-python = ">=3.14"
mypy.requires-python = ">=3.14"
notebook.requires-python = ">=3.14"
nox.requires-python = ">=3.14"

# * Checks ---------------------------------------------------------------------
[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # use typos
    "PC170",  # pygrep
]

[tool.check-wheel-contents]
src_dir = [ "src" ]
toplevel = [ "analphipy" ]

[tool.pyproject-fmt]
# max_supported_python = "3.13"
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
    "tool.mypy.overrides",
    "tool.pyproject2conda",
    "tool.pyrefly.sub-config",
    "tool.pyright.executionEnvironments",
    "tool.pytest",
    "tool.ty.overrides",
    "tool.typos",
    "tool.uv.dependency-groups",
    "tool.uv.exclude-newer-package",
]
indent = 4
keep_full_version = true

[tool.typos.default]
# nbqa generated
extend-ignore-re = [ "# %%NBQA-.*" ]

[tool.typos.default.extend-identifiers]
CPY = "CPY"

[tool.typos.type.jupyter]
# only check file name for notebooks.  Use nbaq for contents.
check-file = false

# * typecheck ---------------------------------------------------------------------
[tool.mypy]
files = [
    "noxfile.py",
    "src",
    "tests",
    "tools",
]
# options
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [ "tests.*" ]
disable_error_code = "arg-type"

[[tool.mypy.overrides]]
module = [ "matplotlib.*" ]
ignore_missing_imports = true

[tool.pyrefly]
enabled-ignores = [ "pyrefly" ]
project-includes = [
    "noxfile.py",
    "src",
    "tests",
    "tools",
]
search-path = [ "." ]

[[tool.pyrefly.sub-config]]
ignore-missing-imports = [ "matplotlib.*" ]
matches = "examples/**"

[tool.pyright]
typeCheckingMode = "standard"
strict = [
    "noxfile.py",
    "src",
    "tools/*.py",
]
include = [
    "noxfile.py",
    "src",
    "tests",
    "tools",
]
exclude = [
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/__pycache__",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
enableTypeIgnoreComments = false
# options
# reportImportCycles = true  # TODO(wpk): enable when refactored
# reportMissingSuperCall = true
deprecateTypingAliases = true
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = false
reportImportCycles = false
reportOverlappingOverload = true
reportPrivateImportUsage = false
reportPrivateUsage = false
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedCallResult = true
reportUnusedImport = false
reportUnusedVariable = false
enableReachabilityAnalysis = false

[[tool.pyright.executionEnvironments]]
root = "tests"
# TODO(wpk): get rid of these
reportArgumentType = false
reportImplicitOverride = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnusedCallResult = false

[[tool.pyright.executionEnvironments]]
reportUnusedCallResult = false
root = "examples"

[tool.ty]
src.include = [
    "noxfile.py",
    "src",
    "tests",
    "tools",
]
analysis.respect-type-ignore-comments = false

[[tool.ty.overrides]]
include = [ "examples/**" ]

[tool.ty.overrides.analysis]
allowed-unresolved-imports = [ "matplotlib.*" ]

# * Testing --------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = [
    "README.md",
    "analphipy",
    "tests",
]
# options
filterwarnings = [ "error" ]
log_cli_level = "INFO"
log_level = "INFO"
minversion = "8"
strict_xfail = "true"

[tool.coverage]
run.branch = true
run.source = [
    "analphipy",
]
paths.source = [
    "src/",
    # needed for testing source if not editable install
    ".nox/**/site-packages/",
    "*/.nox/**/site-packages",
    "*/src",
]
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/_typing.py",
    "*/vendored/*",
]
report.show_missing = true

[tool.commitizen]
use_shortcuts = true

# * Dependency creation --------------------------------------------------------
[tool.pyproject2conda]
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
conda-deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }

[tool.pyproject2conda.envs.dev]
groups = "dev"

[tool.pyproject2conda.envs.test]
groups = "test"
python = "all"

[tool.pyproject2conda.envs.test-extras]
groups = "test-extras"
python = "all"
skip-package = true

[tool.pyproject2conda.envs.uvx-tools]
pip-deps = [
    # these used solely for specking tools to be run via uvx ...
    "conda-lock>=4.0.0",
    "copier-template-extensions>=0.3.3",
    "copier>=9.15.1",
    "grayskull>=3.1.1",
    "nbqa>=1.9.1",
    "prek>=0.4.4",
    "pyrefly>=1.0.0",
    "pyright>=1.1.410",
    "rooster>=0.1.1",
    "twine>=6.2.0",
    "ty>=0.0.48",
]
groups = [
    "basedpyright",
    "mypy",
    "typecheck-runner",
]
skip-package = true
style = "requirements"

[tool.uv-locker]
scripts = [
    "noxfile.py",
    "tools/check_dist_version.py",
    "tools/clean_kernelspec.py",
    "tools/sync_pyproject_min_versions.py",
]

[[tool.uv-locker.requirements]]
path = "requirements/uvx-tools.txt"
output-file = "requirements/lock/uvx-tools.txt"
python = "min"
options = [
    "--no-deps",
    "--no-strip-extras",
    "--universal",
]

# * Other tools ----------------------------------------------------------------
[tool.rooster]
changelog_contributors = true
major-labels = [ "breaking" ]
minor_labels = [ "enhancement" ]
patch-labels = [ "bug", "documentation" ]
# options
ignore-labels = [ "internal" ]
require-labels = [ "breaking", "bug", "documentation", "enhancement" ]
version_files = [
    "pyproject.toml",
]
# sections
section-labels."Breaking changes" = [ "breaking" ]
section-labels."Bug fixes" = [ "bug" ]
section-labels.Documentation = [ "documentation" ]
section-labels.Enhancements = [ "enhancement" ]
section-labels.Internal = [ "internal" ]
section-labels."Other changes" = [ "__unknown__" ]
